samples/_failures_safe/1761254306_c0d95d_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_54ac2dbb.c: In function ‘create_sample_graph’:
./samples/SAFE/__tmp_54ac2dbb.c:160:9: error: expected expression at end of input
  160 |         g.edges[i] =
      |         ^
./samples/SAFE/__tmp_54ac2dbb.c:160:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_54ac2dbb.c:160:9: error: expected declaration or statement at end of input
